REGRESSION(264248@main): A floating element can cause a list item's bullet to be orphaned on overconstrained lines https://bugs.webkit.org/show_bug.cgi?id=266801 <rdar://problem/120022893>

Reviewed by Antti Koivisto.

Do not disconnect list marker and the associated list item when they are embedded in a list element (e.g. <div><ul><li> vs. <div><li>) -and they are not positioned inside.
This quirky behavior matches both Chrome and legacy line layout.

* LayoutTests/fast/inline/list-item-inside-list-and-wrap-expected.html: Added.
* LayoutTests/fast/inline/list-item-inside-list-and-wrap.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::isAtSoftWrapOpportunity): Check whether we are inside a list element to decide whether we can break after the list marker.
* Source/WebCore/layout/integration/LayoutIntegrationBoxTree.cpp:
(WebCore::LayoutIntegration::BoxTree::createLayoutBox):
* Source/WebCore/layout/layouttree/LayoutElementBox.h:
(WebCore::Layout::ElementBox::isListMarkerInsideList const):

Canonical link: https://commits.webkit.org/272451@main