Source/WebCore/layout/integration/LayoutIntegrationBoxTree.cpp
@@ -231,6 +231,8 @@ UniqueRef<Layout::Box> BoxTree::createLayoutBox(RenderObject& renderer)
             listMarkerAttributes.add(Layout::ElementBox::ListMarkerAttribute::Image);
         if (!listMarkerRenderer.isInside())
             listMarkerAttributes.add(Layout::ElementBox::ListMarkerAttribute::Outside);
+        if (listMarkerRenderer.listItem() && !listMarkerRenderer.listItem()->notInList())
+            listMarkerAttributes.add(Layout::ElementBox::ListMarkerAttribute::HasListElementAncestor);
         return makeUniqueRef<Layout::ElementBox>(elementAttributes(renderElement), listMarkerAttributes, WTFMove(style), WTFMove(firstLineStyle));
     }
 
